--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -295,6 +295,144 @@
     "\n",
     "}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b54a3df9-2b44-43b4-be7b-efae9f8a2459",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\user\\\\Desktop\\\\hs_test'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ec3b5cee-057e-492d-a29b-6c2b47e9bf42",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['.git',\n",
+       " '.gitignore',\n",
+       " '.ipynb_checkpoints',\n",
+       " '.touch.txt.swp',\n",
+       " '.virtual_documents',\n",
+       " '2024-07-04-MLOPS_test.ipynb',\n",
+       " 'ADsP - part1 데이터의 이해.ipynb',\n",
+       " 'boston.csv',\n",
+       " 'data',\n",
+       " 'iris.csv',\n",
+       " 'iris2.csv',\n",
+       " 'jupiter.png',\n",
+       " 'kaggle',\n",
+       " 'LICENSE',\n",
+       " 'mysql_class',\n",
+       " 'ns_202104.csv',\n",
+       " 'ns_book7.csv',\n",
+       " 'python_240701.ipynb',\n",
+       " 'python_240702 문제&정답.ipynb',\n",
+       " 'python_240702.ipynb',\n",
+       " 'python_240702_T.ipynb',\n",
+       " 'python_240703.ipynb',\n",
+       " 'python_240703_T.ipynb',\n",
+       " 'python_240704.ipynb',\n",
+       " 'python_240704_T.ipynb',\n",
+       " 'python_240705_답지.ipynb',\n",
+       " 'python_240705_문제.ipynb',\n",
+       " 'README.md',\n",
+       " 'requirements.txt',\n",
+       " 'sample_data.ipynb',\n",
+       " 'st_test',\n",
+       " 'test_data',\n",
+       " 'tips_visualization.png',\n",
+       " 'Untitled.ipynb',\n",
+       " 'untitled.txt',\n",
+       " 'Untitled1.ipynb',\n",
+       " 'venv',\n",
+       " 'yourname.png',\n",
+       " '작업3유형_기출문제_답지_강의용.ipynb',\n",
+       " '작업3유형_기출문제_문제.ipynb']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.listdir()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "fc609b41-82e5-4390-a625-39833843d8b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file = os.listdir()\n",
+    "# len(file)\n",
+    "\n",
+    "type(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "6b3d3656-18b4-49d1-a5e9-8cc197aa1d61",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python.exe\n",
+      "pythonw.exe\n",
+      "Uninstall-Anaconda3.exe\n",
+      "_conda.exe\n"
+     ]
+    }
+   ],
+   "source": [
+    "os.listdir('C:/ProgramData/anaconda3')\n",
+    "for i in os.listdir('C:/ProgramData/anaconda3'):\n",
+    "    if i.endswith('exe'):\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eff320b4-078d-4a27-baf1-199c93be1cf0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
